--- a/src/index.css
+++ b/src/index.css
@@ -46,4 +46,44 @@
         height: 100vh; 
         width: 100%; 
       }
-      
+
+
+      .dumble-animation {
+        transition-property: transform;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 500ms;
+    }
+
+    .bolt-animation-dad {
+      perspective: 1000px; 
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    
+    .bolt-animation {
+      transform: rotateY(0deg);
+      transition: transform 700ms ease-in-out; 
+    }
+    
+    .bolt-3d {
+      transform-style: preserve-3d; 
+    }
+
+    .bolt-animation:hover {
+      transform: rotateY(360deg);
+    }
+
+    @layer utilities {
+      @keyframes shake {
+        0% { transform: translateX(0); }
+        25% { transform: translateX(-2px); }
+        50% { transform: translateX(2px); }
+        75% { transform: translateX(-2px); }
+        100% { transform: translateX(0); }
+      }
+    
+      .hover-shake:hover {
+        animation: shake 0.3s ease-in-out;
+      }
+    }
